# Google-Maps-Business-Scraper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.yaml  dedupe_tool.py  maps_scraper.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: proxy_guide.md
scraper/: __init__.py  browser.py  config.py  controls.py  extractor.py  filters.py  storage.py  utils.py
tests/: test_scraper.py
